cluster/app-01/pod.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app-03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-app
  template:
    metadata:
      labels:
        app: simple-app
    spec:
      nodeSelector:
        environment: devfe
      containers:
      - name: simple-app
        image: pnsmiling/phong
        ports:
        - containerPort: 80
          name: simple-app-port
        resources:
            requests:
              cpu: "1"
              memory: "150Mi"
            limits:
              cpu: "2"
              memory: "250Mi"
        volumeMounts: 
        - name: sc-store-01
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: sc-store-01
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "sc-provider-env"
